# plugnmeet-sdk

./: .gitignore  README.md  pyproject.toml
examples/: CreateRoom.py  DeleteAnalytics.py  DeleteRecordings.py  EndRoom.py  FetchAnalytics.py  FetchPastRoomsInfo.py  FetchRecordings.py  GetActiveRoomInfo.py  GetActiveRoomsInfo.py  GetAnalyticsDownloadToken.py  GetClientFiles.py  GetJoinToken.py  GetRecordingDownloadToken.py  IsRoomActive.py  RecordingInfo.py
src/plugnmeet_sdk/: PlugNMeet.py  __init__.py  exceptions.py  utils.py
src/plugnmeet_sdk/schemas/data/: __init__.py  _data.py
src/plugnmeet_sdk/schemas/requests/: __init__.py  _requests.py
