[project]
name = "plugnmeet-sdk"
dynamic = ["version"]
description = "Pythonic SDK for PlugNmeet meeting platform"
authors = [
  { name = "vector-mj", email = "mj.hosseini.dev@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "aiohttp>=3.12.0",
    "attrs>=25.3.0"
]

[project.urls]
Homepage = "https://github.com/vector-mj/plugnmeet-sdk"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "postrelease"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*", "examples*"]